Solve some api documentation issues
